Float data images display trash in image editor #39953

Closed
opened 2014-04-29 22:59:54 +02:00 by Antonis Ryakiotakis · 6 comments

System Information
Ubuntu 13.10 64bit Geforce 540GTM 8GBRAM

Blender Version
Broken:
Worked: (optional)

Short description of error
Image editor displays trash when painting under a specific set of circumstances:

  • Float image assigned to normal slot (may mean it is tagged as data?)
  • GLSL mode in viewport
  • 2D texture or DrawPixels image display method

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Open attached file Issue.blend
  • Make sure one of the above methods is selected
  • Try painting on image editor or viewport
**System Information** Ubuntu 13.10 64bit Geforce 540GTM 8GBRAM **Blender Version** Broken: Worked: (optional) **Short description of error** Image editor displays trash when painting under a specific set of circumstances: * Float image assigned to normal slot (may mean it is tagged as data?) * GLSL mode in viewport * 2D texture or DrawPixels image display method **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps * Open attached file [Issue.blend](https://archive.blender.org/developer/F86410/Issue.blend) * Make sure one of the above methods is selected * Try painting on image editor or viewport
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Antonis Ryakiotakis 2014-04-29 22:59:54 +02:00
Author
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This issue was referenced by blender/blender-addons-contrib@fe29f92030

This issue was referenced by blender/blender-addons-contrib@fe29f92030fe803f625efaab0842a4d79a8de428

This issue was referenced by fe29f92030

This issue was referenced by fe29f92030fe803f625efaab0842a4d79a8de428

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fe29f92030.

Closed by commit fe29f92030.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39953
No description provided.