Fix T39953:  Float data images display trash in image editor

Was a failure of optimization trick.